hphp/hack/test/dot_hack/dot_hackpartial_can_not_have_header.hackpartial.exp
File "dot_hackpartial_can_not_have_header.hackpartial", line 1, characters 1-4:
Leading markup and `<?hh` are not permitted in `.hackpartial` files, which are always `partial`. (Parsing[1002])
