hphp/hack/test/dot_hack/dot_hackpartial_can_not_have_header.hackpartial
<?hh // partial

function foo(): void {
}
